Add comment block

--- a/themes/custom/chain/chain.info.yml
+++ b/themes/custom/chain/chain.info.yml
@@ -8,8 +8,9 @@ regions:
   hero: "Hero"
   service: "Service"
   about: "About"
+  comment: "Comment"
   content: "Content"
-  princing: "Pricing"
+  pricing: "Pricing"
   newsletter: "News Letter"
   footer: "Footer"
   page_top: "Page top"
